// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalContainer /> snapshot should match snapshot 1`] = `
<ModalContainer>
  <div
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with children 1`] = `
<ModalContainer>
  <div
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
  >
    <div>
      Example Text
    </div>
  </div>
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with className 1`] = `
<ModalContainer
  className="example-class"
>
  <div
    className="example-class md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with color 1`] = `
<ModalContainer
  color="quaternary"
>
  <div
    className="md-modal-container-wrapper"
    data-color="quaternary"
    data-elevation={0}
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with color 2`] = `
<ModalContainer
  elevation={8}
>
  <div
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={8}
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with id 1`] = `
<ModalContainer
  id="example-id"
>
  <div
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    id="example-id"
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with isPadded 1`] = `
<ModalContainer
  isPadded={true}
>
  <div
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-padded={true}
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with isRounded 1`] = `
<ModalContainer
  isRounded={true}
>
  <div
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-rounded={true}
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with style 1`] = `
<ModalContainer
  style={
    Object {
      "color": "pink",
    }
  }
>
  <div
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    style={
      Object {
        "color": "pink",
      }
    }
  />
</ModalContainer>
`;
